--- a/public/app.css
+++ b/public/app.css
@@ -6,19 +6,30 @@ body {
     font-size: 14px;
 }
 
+.title {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 30px;
+    line-height: 50px;
+    letter-spacing: 3px;
+}
+
+p {
+    margin-bottom: 39px;
+}
+
 .btn {
     color: white;
     background-color: darkslateblue;
-    border: 1px solid darkslateblue;
-    border-radius: 5px;
     padding: 9px;
     transition: all .3s;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .btn:hover {
-    color: darkslateblue;
-    background-color: white;
+    background-color: slateblue;
 }
